--- a/styles.css
+++ b/styles.css
@@ -24,19 +24,21 @@ h1 {
     padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
-    cursor: pointer;
-    position: relative;
     transition: background-color 0.3s;
+    user-select: none;
+    position: relative;
 }
 
 .ramo.desbloqueado {
-    background-color: #ffaeb9;
-    color: #fff;
+    background-color: #ff8da3;
+    color: white;
+    cursor: pointer;
 }
 
 .ramo.aprobado {
     background-color: #ba55d3;
-    color: #fff;
+    color: white;
+    cursor: pointer;
 }
 
 .ramo.bloqueado {
@@ -45,7 +47,6 @@ h1 {
     cursor: not-allowed;
 }
 
-/* Tooltip */
 .ramo::after {
     content: attr(data-tooltip);
     position: absolute;
@@ -54,12 +55,15 @@ h1 {
     transform: translateX(-50%);
     background-color: #333;
     color: #fff;
-    padding: 5px 10px;
+    padding: 6px 10px;
     white-space: pre-line;
-    border-radius: 4px;
+    border-radius: 5px;
     opacity: 0;
     pointer-events: none;
-    font-size: 12px;
+    font-size: 13px;
+    width: max-content;
+    max-width: 250px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
     transition: opacity 0.3s;
     z-index: 10;
 }
